Bug 109177 - Dialogs: vertical scrollbar automatically changed to horizontal
Summary: Dialogs: vertical scrollbar automatically changed to horizontal
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
5.2.3.3 release
Hardware: All All
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:6.0.0 target:5.4.1 target:5.3.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-07-17 20:12 UTC by Gerhard Weydt
Modified: 2017-08-25 20:41 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Pic 1: designing dialog and preview (29.44 KB, image/png)
2017-07-29 06:53 UTC, Thomas Krumbein
Details
pic 2 - starting the dialog per code (28.50 KB, image/png)
2017-07-29 06:54 UTC, Thomas Krumbein
Details
Pic 3 - correcting the orientation and starting again (18.26 KB, image/png)
2017-07-29 06:55 UTC, Thomas Krumbein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerhard Weydt 2017-07-17 20:12:13 UTC
Description:
Since at least version 5.2.3 and beginning after 5.0.6 a scrollbar with vertical orientation is changed to type horizontal, which of course makes it unusable, as you do not see the arrows any more. I cannot say exactly what happens, but it seems that the change to vertical is not registered in the file.
This, as far as I know, affects dialogs, but not forms.
Starting with version 5.3 this even happens when installing an extension comprising a vertical scrollbar, which is changed to type horizontal; in version 5.2 the scrollbar is still vertical after installing the extension.

Steps to Reproduce:
It takes more effort to show that the change to vertical isn't even stored, because you need a running application, so here's an easy way to see the result:
1. create a new scrollbar of (or change an existing to) type vertical in a dialog
2. save the change
3. close the macro IDE
4. open the dialog in the macro IDE

Actual Results:  
scrollbar is of type horizontal

Expected Results:
scrollbar should still have type vertical


Reproducible: Always

User Profile Reset: No

Additional Info:
In version 5.3 this even affects extensions not newly installed, but simply taken over because they were present in the old installation:
In Xray there are horizontal and vertical scrollbars to change the size of the dialog; only the horizontal scrollbar still works in version 5.3.
And this may affect lots of installed applications!!!


User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:54.0) Gecko/20100101 Firefox/54.0
Comment 1 Regina Henschel 2017-07-18 12:10:24 UTC
The attribute dlg:align="vertical" is not read, in case you use an old macro. If you change the scrollbar orientation to 'Vertical' in the UI and then save the macros, the attribute dlg:align is not written. For an old macro that results in loss of the existing attribute. Result is, that the default value is used, which means horizontal orientation.

It is OK in Version: 4.5.0.0.alpha0+
Build ID: 40b1e8266e47792d354cd457c652bfb0f0a21e69
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-02-11_00:13:43
Locale: de_DE
Comment 2 Regina Henschel 2017-07-18 12:17:19 UTC
If you set a break point and manually change the value from 0 to 1 for the orientation, then afterwards the scrollbar works as expected. So it seems to be a problem in reading/writing the .xdl dialog definition file.
Comment 3 Regina Henschel 2017-07-18 13:12:30 UTC
I cannot confirm the version.

For me it is OK till
Version: 5.3.0.0.alpha0+
Build ID: 3ab13873ebb6dc4738be2e2184ee4433a2447c1d
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-06-16_01:48:01
Locale: de-DE (de_DE)

For me it fails since
Version: 5.3.0.0.alpha0+
Build ID: fc95bc132db20e7701088c76da6ec039031feadf
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-07-06_12:20:17
Locale: de-DE (de_DE); Calc: group

I have got no version between to test.
Comment 4 Thomas Krumbein 2017-07-29 06:53:11 UTC
I can confirm this bug in :
Version: 5.4.0.3 (x64)
Build-ID: 92c2794a7c181ba4c1c5053618179937228ed1fb
CPU-Threads: 4; Betriebssystem:Windows 6.19; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group

so, some additional Informations:

creating a new dialog in Basic-IDE (only with both scrollbars) and aktivate Preview in Basic-IDE everythind works as expected (see pic1)

starting dialog per basic code vertical scrollbar ist not usable (see pic2)

reason (as mentioned in prior tags): control orientation is still 0 - that means horizontal.

changing the orientation per code to 1 and starting the dialog after the bug is fixed (see pic3).
Comment 5 Thomas Krumbein 2017-07-29 06:53:47 UTC
Created attachment 134962 [details]
Pic 1: designing dialog and preview
Comment 6 Thomas Krumbein 2017-07-29 06:54:24 UTC
Created attachment 134963 [details]
pic 2 - starting the dialog per code
Comment 7 Thomas Krumbein 2017-07-29 06:55:00 UTC
Created attachment 134964 [details]
Pic 3 - correcting the orientation and starting again
Comment 8 raal 2017-07-31 20:29:56 UTC
This seems to have begun at the below commit.
Adding Cc: to Stephan Bergmann ; Could you possibly take a look at this one?
Thanks
 72ed4d8a3db7e41697ea9d299a4715450d47a3a8 is the first bad commit
commit 72ed4d8a3db7e41697ea9d299a4715450d47a3a8
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Sep 28 02:44:15 2016 +0200

    source 7e781aa15ab8c6bb727ccf290db7768bc9ba6245


author	Stephan Bergmann <sbergman@redhat.com>	2016-06-27 13:41:42 (GMT)
committer	Stephan Bergmann <sbergman@redhat.com>	2016-06-27 13:41:42 (GMT)
commit 7e781aa15ab8c6bb727ccf290db7768bc9ba6245 (patch)
tree 39e0e0bbe1c5d49a47979da852387d966e4ed388
parent 232dcd258dc03c318e197fe4bfb0080353423760 (diff)
Clean up uses of Any::getValue() in xmlscript
Comment 9 Gerhard Weydt 2017-07-31 22:08:34 UTC
Bug 110458 is somewhat similar, in both cases setting an attribute in a form in design mode seems not to be recognized.
So if someone tackles this bug her, he might have a look at this other bug too.

Gerhard
Comment 10 Commit Notification 2017-08-10 09:27:12 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fc6b2f745300eae03373a1beb5d5ff79cf7de10

tdf#109177: Fix expected type of Orientation attr

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2017-08-10 10:10:38 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=efc91dd551e617f4a24b52a0284bdca850f4d61b&h=libreoffice-5-4

tdf#109177: Fix expected type of Orientation attr

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2017-08-10 10:10:50 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b2dcb3eb74038f6e4c25cc1f1ee4ef2f0d25e11&h=libreoffice-5-3

tdf#109177: Fix expected type of Orientation attr

It will be available in 5.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.