tdf#109177: Fix expected type of Orientation attr

Regression introduced with 7e781aa15ab8c6bb727ccf290db7768bc9ba6245 "Clean up
uses of Any::getValue() in xmlscript"

Change-Id: I66df1c5aacab1d697438c57418c9100f9dba627a